[ADD] Добавил миникарту
Добавил миникарту в игру с иконкой текущего положения игрока.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\GlobalVars.cs" />
+     <Compile Include="Assets\Scripts\Minimap.cs" />
      <Compile Include="Assets\Scripts\PlayerMouseController.cs" />
      <Compile Include="Assets\Scripts\TowersUI.cs" />
      <Compile Include="Assets\Scripts\ai\MobAI.cs" />
